# Memorado

./: FlashCards.doap  Memorado.doap  README.md  im.bernard.Memorado.json  meson.build
.github/workflows/: flatpak.yml
data/: about_dialog.ui.in  im.bernard.Memorado.desktop.in.in  im.bernard.Memorado.metainfo.xml.in.in  io.github.fkinoshita.FlashCards.desktop.in.in  io.github.fkinoshita.FlashCards.metainfo.xml.in.in  meson.build  resources.gresource.xml  style.css
data/icons/: meson.build
data/ui/: card_edit.blp  card_edit_view.blp  card_new_view.blp  card_row.blp  card_view.blp  deck_row.blp  deck_view.blp  list_view.blp  welcome.blp  window.blp
po/: LINGUAS  POTFILES.in  de.po  eo.po  flashcards.pot  hi.po  it.po  memorado.pot  nl.po  pt_BR.po  tr.po  uk.po
src/: application.py  card_edit.py  card_edit_view.py  card_new_view.py  card_row.py  card_view.py  const.py.in  deck_row.py  deck_view.py  list_view.py  memorado.in  meson.build  shared.py  welcome.py  window.py
